// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`yaml-util can add token if it does not exist 1`] = `
"myProfile:
  target: local
  outputs:
    local:
      type: duckdb
      path: /tmp/data.duckdb
      extensions:
        - httpfs
        - parquet
      plugins:
        - module: boilingdata
          config:
            token: VALID
      threads: 4
"
`;

exports[`yaml-util can add tokens, nested, multiple profiles 1`] = `
"myProfile:
  target: local
  outputs:
    local:
      type: duckdb
      path: /tmp/data.duckdb
      extensions:
        - httpfs
        - parquet
      plugins:
        - module: boilingdata
          plugins:
            - module: boilingdata
              plugins:
                - module: boilingdata
                  config:
                    token: VALID
              config:
                token: VALID
          config:
            token: VALID
      threads: 4
myProfile2:
  target: local
  outputs:
    local:
      type: duckdb
      path: /tmp/data.duckdb
      extensions:
        - httpfs
        - parquet
      plugins:
        - module: boilingdata
          plugins:
            - module: boilingdata
              plugins:
                - module: boilingdata
                  config:
                    token: VALID
              config:
                token: VALID
          config:
            token: VALID
      threads: 4
"
`;

exports[`yaml-util can update single existing token 1`] = `
"myProfile:
  target: local
  outputs:
    local:
      type: duckdb
      path: /tmp/data.duckdb
      extensions:
        - httpfs
        - parquet
      plugins:
        - module: boilingdata
          config:
            token: VALID
            something: else2
            like:
              nested: keys
      threads: 4
"
`;
